--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
                         </a>
                     </li>
                     <li class="team-member-tile">
+                        <a class="team-member" href="./users/yuu.html">
+                            <img
+                                class="team-member-image"
+                                src="./assets/people/yuu.jpg"
+                                alt="Yuu"
+                            />
+                            <h5 class="team-member-header">Yuu</h5>
+                            <span class="team-member-task">Moderator</span>
+                        </a>
+                    </li>
+                    <li class="team-member-tile">
                         <a class="team-member" href="./users/zolusion.html">
                             <img
                                 class="team-member-image"
