--- a/users/zolusion.html
+++ b/users/zolusion.html
@@ -37,23 +37,13 @@
                 </h2>
                 <br />
                 <p>
-                    Zolusion, whose real name is Furkan Baykal is a member of
-                    <span class="highlighted-text black">Minesa.</span>
-                    <strong>Furkan Baykal</strong> a 25-year-old software
-                    developer, hails from the vibrant city of Rotterdam.
+                    Zolusion, also known as Furkan Baykal, recently graduated from his MBO level 4 program in software development. 
+                    At 26 years old, he is now actively seeking a full-time position as a Junior Front-End Developer. 
+                    Originally from Rotterdam, Furkan has demonstrated dedication and ambition in his pursuit of a career in technology. 
+                    He specializes in crafting user-friendly interfaces using technologies such as Laravel and React, honing his skills during his studies and through practical experience at Xeniox. 
+                    Furkan's journey underscores his commitment to continuous learning and professional development.
                 </p>
-                <br />
-                <p>
-                    Currently pursuing his education in software development.
-                    Furkan is a dedicated and ambitious individual. Beyond his
-                    studies, he's also carving a promising career path as a
-                    <strong>front-end developer at Xeniox</strong>, where he
-                    specializes in the art of crafting user-friendly interfaces
-                    using the dynamic technologies of Laravel and React.
-                    <br />
-                    Furkan's journey in the tech world exemplifies a commitment
-                    to both learning and professional growth.
-                </p>
+                    
             </article>
         </main>
 
