New Updates - Added Kaeru to website. - Updated main page's layout. - Added owner tag to myself.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <!-- hero image-->
-            <img src="assets/people/ita/ita_header.png" alt="ita with cubes" />
+            <img src="assets/people/ita/ita_support.png" alt="ita with cubes" />
         </header>
 
         <!-- main -->
@@ -124,18 +124,22 @@
                     </div>
 
                     <!-- support container -->
-                    <a class="ita__container" href="./users/ita.html">
+                    <a
+                        class="kaeru__container"
+                        href="./users//kaeru/index.html"
+                        target="_blank"
+                    >
                         <div>
                             <h3>
-                                Ita. Your
-                                <span class="highlighted-text teal">
+                                Kaeru. Your
+                                <span class="highlighted-text brown">
                                     Supportive Bot.
                                 </span>
                             </h3>
                             <p>
-                                Ita, the heart and soul of Minesa, is your
-                                dedicated support bot and cherished mascot.
-                                <span id="cool-text"> Trust in Ita, </span>
+                                Kaeru, the heart and soul of Minesa, is your
+                                dedicated support bot.
+                                <span id="cool-text"> Trust in Kaeru, </span>
                                 your ever-reliable companion on your journey
                                 with Minesa.
                             </p>
@@ -253,7 +257,9 @@
                                 alt=""
                             />
                             <h5 class="team-member-header">Neo</h5>
-                            <span class="team-member-task">Developer</span>
+                            <span class="team-member-task"
+                                >Developer / Owner</span
+                            >
                         </a>
                     </li>
                     <li class="team-member-tile">
