--- a/users/neo.html
+++ b/users/neo.html
@@ -26,6 +26,7 @@
                 <div class="user__description">
                     <h1>Neo</h1>
                     <h4>Developer</h4>
+                    <h6>Owner</h6>
                 </div>
             </section>
 
@@ -169,7 +170,7 @@
                 <a href="https://discord.gg/wev5s6r4UB" target="_blank">
                     <li>Discord</li>
                 </a>
-                <a href="https://github.com/minesa-time"target="_blank">
+                <a href="https://github.com/minesa-time" target="_blank">
                     <li>GitHub</li>
                 </a>
             </ul>
