// to / on path

--- a/users/kaeru.html
+++ b/users/kaeru.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./kaeru/style.css" />
         <meta name="view-transition" content="same-origin" />
         <title>Kaeru ❀</title>
     </head>
@@ -12,7 +12,7 @@
             <span class="logo">Kaeru”</span>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./kaeru.html">Home</a></li>
                     <li>
                         <a href="./pages/commands.html">Commands</a>
                     </li>
