--- a/users/kaeru/pages/tos.html
+++ b/users/kaeru/pages/tos.html
@@ -12,7 +12,7 @@
             <span class="logo">Kaeru”</span>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../../kaeru.html">Home</a></li>
                     <li>
                         <a href="./commands.html">Commands</a>
                     </li>
