--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <!-- support container -->
                     <a
                         class="kaeru__container"
-                        href="./users//kaeru/index.html"
+                        href="./users/kaeru.html"
                         target="_blank"
                     >
                         <div>
