--- a/users/kaeru.html
+++ b/users/kaeru.html
@@ -14,10 +14,10 @@
                 <ul>
                     <li><a href="./kaeru.html">Home</a></li>
                     <li>
-                        <a href="./pages/commands.html">Commands</a>
+                        <a href="./kaeru/pages/commands.html">Commands</a>
                     </li>
                     <li>
-                        <a href="./pages/tos.html">Privacy & TOS</a>
+                        <a href="./kaeru/pages/tos.html">Privacy & TOS</a>
                     </li>
                 </ul>
             </nav>
