--- a/linked-role.html
+++ b/linked-role.html
@@ -11,7 +11,7 @@
             To approve the Discord Linked Role Bot, please click the button
             below:
         </p>
-        <a href="/linked-role" target="_blank"><button>Approve Bot</button></a>
+        <a href="https://discord.com/oauth2/authorize?client_id=736561919292473454&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fdiscord-oauth-callback&response_type=code&state=fe8dff98-81f2-46be-a418-75388a26732d&scope=role_connections.write+identify&prompt=consent" target="_blank"><button>Approve Bot</button></a>
         <p>After approving the bot, please return to Discord to continue.</p>
     </body>
 </html>
