--- a/linked-role.html
+++ b/linked-role.html
@@ -12,7 +12,7 @@
             below:
         </p>
         <a
-            href="https://discord.com/oauth2/authorize?client_id=736561919292473454&redirect_uri=http%3A%2F%2Fminesa.live%2Fdiscord-oauth-callback&response_type=code&state=fe8dff98-81f2-46be-a418-75388a26732d&scope=role_connections.write+identify&prompt=consent"
+            href="https://discord.com/oauth2/authorize?client_id=736561919292473454&redirect_uri=https%3A%2F%2Fminesa.live%2Fdiscord-oauth-callback&response_type=code&state=fe8dff98-81f2-46be-a418-75388a26732d&scope=role_connections.write+identify&prompt=consent"
             target="_blank"
             ><button>Approve Bot</button></a
         >
