--- a/users/kaeru/pages/tos.html
+++ b/users/kaeru/pages/tos.html
@@ -28,8 +28,7 @@
                     <h1>Privacy Policy</h1>
 
                     <p>
-                        Your privacy is important to us. It is [Your Company
-                        Name]'s policy to respect your privacy regarding any
+                        Your privacy is important to us. It is Minesa's policy to respect your privacy regarding any
                         information we may collect from you across our website,
                         and other sites we own and operate.
                     </p>
