--- a/users/kaeru/pages/commands.html
+++ b/users/kaeru/pages/commands.html
@@ -92,7 +92,7 @@
                         <p>
                             You might also get bored to see typing a command to
                             see specific user's banner or profile picture. With
-                            Ita, you do not longer to type and type the user's
+                            Kaeru, you do not longer to type and type the user's
                             <strong>username</strong> on the place! Just click
                             to user and done!
                         </p>
